# Structure-PLP-SLAM

./: .gitignore  CMakeLists.txt  README.md
cmake/: Config.cmake.in
example/: CMakeLists.txt  run_camera_localization.cc  run_camera_slam.cc  run_euroc_slam.cc  run_euroc_slam_planeSeg.cc  run_euroc_slam_with_line.cc  run_image_localization.cc  run_image_localization_point_line.cc  run_image_slam.cc  run_image_slam_planeSeg.cc  run_kitti_slam.cc  run_kitti_slam_with_line.cc  run_slam_planeSeg.cc  run_tum_rgbd_slam.cc  run_tum_rgbd_slam_with_line.cc  run_video_localization.cc  run_video_slam.cc
example/icl_nuim/: mono.yaml  rgbd.yaml
example/muselearn/: mono.yaml
example/util/: euroc_planeSeg_util.cc  euroc_planeSeg_util.h  euroc_util.cc  euroc_util.h  image_planeSeg_util.cc  image_planeSeg_util.h  image_util.cc  image_util.h  kitti_util.cc  kitti_util.h  planeSeg_util.cc  planeSeg_util.h  tum_rgbd_util.cc  tum_rgbd_util.h
ros/src/openvslam/: CMakeLists.txt  package.xml
ros/src/publisher/: CMakeLists.txt  package.xml
src/: CMakeLists.txt
src/PLPSLAM/: CMakeLists.txt  config.cc  config.h  global_optimization_module.cc  global_optimization_module.h  mapping_module.cc  mapping_module.h  planar_mapping_module.cc  planar_mapping_module.h  planar_mapping_parameters.yaml  system.cc  system.h  tracking_module.cc  tracking_module.h  type.h
src/PLPSLAM/camera/: CMakeLists.txt  base.cc  base.h  equirectangular.cc  equirectangular.h  fisheye.cc  fisheye.h  perspective.cc  perspective.h
src/PLPSLAM/data/: CMakeLists.txt  bow_database.cc  bow_database.h  bow_vocabulary.h  camera_database.cc  camera_database.h  common.cc  common.h  frame.cc  frame.h  frame_statistics.cc  frame_statistics.h  graph_node.cc  graph_node.h  keyframe.cc  keyframe.h  landmark.cc  landmark.h  landmark_line.cc  landmark_line.h  landmark_plane.cc  landmark_plane.h  map_database.cc  map_database.h
src/PLPSLAM/feature/: CMakeLists.txt  line_extractor.cc  line_extractor.h  orb_extractor.cc  orb_extractor.h  orb_extractor_node.cc  orb_extractor_node.h  orb_params.cc  orb_params.h  orb_point_pairs.h
src/PLPSLAM/feature/line_descriptor/: CMakeLists.txt  LSDDetector_custom.cpp  READEME.txt  binary_descriptor_custom.cpp  binary_descriptor_matcher.cpp  bitarray_custom.hpp  bitops_custom.hpp  descriptor_custom.hpp  draw_custom.cpp  line_descriptor_custom.hpp  precomp_custom.hpp  types_custom.hpp
src/PLPSLAM/initialize/: CMakeLists.txt  base.cc  base.h  bearing_vector.cc  bearing_vector.h  perspective.cc  perspective.h
src/PLPSLAM/io/: CMakeLists.txt  map_database_io.cc  map_database_io.h  trajectory_io.cc  (+1 more)
src/PLPSLAM/optimize/: CMakeLists.txt  global_bundle_adjuster.cc  global_bundle_adjuster.h  graph_optimizer.cc  graph_optimizer.h  local_bundle_adjuster.cc  local_bundle_adjuster.h  local_bundle_adjuster_extended_line.cc  local_bundle_adjuster_extended_line.h  local_bundle_adjuster_extended_plane.cc  local_bundle_adjuster_extended_plane.h  pose_optimizer.cc  pose_optimizer.h  pose_optimizer_extended_line.cc  pose_optimizer_extended_line.h  transform_optimizer.cc  transform_optimizer.h
src/PLPSLAM/optimize/g2o/: CMakeLists.txt  Plane3D.h  landmark_vertex.cc  landmark_vertex.h  landmark_vertex_container.cc  landmark_vertex_container.h  landmark_vertex_container_line3d.cc  landmark_vertex_container_line3d.h  landmark_vertex_line3d.cc  landmark_vertex_line3d.h  landmark_vertex_plane.cc  landmark_vertex_plane.h  landmark_vertex_plane_container.cc  landmark_vertex_plane_container.h  line3d.cc  line3d.h
src/PLPSLAM/optimize/g2o/extended/: CMakeLists.txt  plane_point_distance_edge.cc  plane_point_distance_edge.h  point2plane_distance_edge_wrapper.h
src/PLPSLAM/optimize/g2o/se3/: CMakeLists.txt  equirectangular_pose_opt_edge.cc  equirectangular_pose_opt_edge.h  equirectangular_reproj_edge.cc  equirectangular_reproj_edge.h  perspective_pose_opt_edge.cc  perspective_pose_opt_edge.h  perspective_reproj_edge.cc  perspective_reproj_edge.h  pose_opt_edge_line3d_orthonormal.cc  pose_opt_edge_line3d_orthonormal.h  pose_opt_edge_wrapper.h  reproj_edge_line3d_orthonormal.cc  reproj_edge_line3d_orthonormal.h  reproj_edge_wrapper.h  shot_vertex.cc  shot_vertex.h  shot_vertex_container.cc  shot_vertex_container.h
src/PLPSLAM/optimize/g2o/sim3/: CMakeLists.txt  backward_reproj_edge.cc  backward_reproj_edge.h  forward_reproj_edge.cc  forward_reproj_edge.h  graph_opt_edge.cc  graph_opt_edge.h  mutual_reproj_edge_wrapper.h  shot_vertex.cc  shot_vertex.h  transform_vertex.cc  transform_vertex.h
src/PLPSLAM/solve/GCRANSAC/: CMakeLists.txt  GCRANSAC.h  flann_neighborhood_graph.h  grid_neighborhood_graph.h  model.h  neighborhood_graph.h  preemption_empty.h  preemption_sprt.h  progressive_napsac_sampler.h  prosac_sampler.h  sampler.h  scoring_function.h  settings.h  single_point_sampler.h  statistics.h  types.h  uniform_random_generator.h  uniform_sampler.h
src/PLPSLAM/solve/GCRANSAC/estimator/: CMakeLists.txt  essential_estimator.h  estimator.h  fundamental_estimator.h  homography_estimator.h  linear_model_estimator.h  perspective_n_point_estimator.h  rigid_transformation_estimator.h  sample_consensus_estimator.h
src/PLPSLAM/solve/GCRANSAC/pearl/: CMakeLists.txt  GCoptimization.cpp  GCoptimization.h  LinkedBlockList.cpp  LinkedBlockList.h  block.h  energy.h  graph.cpp  graph.h  maxflow.cpp
src/PLPSLAM/solve/GCRANSAC/solver/: CMakeLists.txt  solver_dls_pnp.h  solver_engine.h  solver_epnp_lm.h  solver_essential_matrix_five_point_stewenius.h  solver_fundamental_matrix_eight_point.h  solver_fundamental_matrix_plane_and_parallax.h  solver_fundamental_matrix_seven_point.h  solver_homography_four_point.h  solver_linear_model.h  solver_p3p.h  solver_rigid_transformation_svd.h
src/pangolin_viewer/: CMakeLists.txt  color_scheme.cc  color_scheme.h  viewer.cc  viewer.h
src/socket_publisher/: CMakeLists.txt  data_serializer.cc  data_serializer.h  publisher.cc  publisher.h  socket_client.h
test/: CMakeLists.txt
test/helper/: bearing_vector.h  keypoint.h  landmark.h
viewer/: Dockerfile  package.json
viewer/views/: index.ejs
(+83 files in other folders)
